<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">MiRerversi</string>

    <string name="mnu_exit">閉じる</string> 
    <string name="mnu_pref">設定</string>  
    <string name="mnu_stat">カウント</string>  
    <string name="mnu_init">最初から始める</string>  

    <string name="pref_cat_general">Hint</string>  
    <string name="pref_show_hints">ヒントを表示</string>  
    <string name="pref_show_hints_on">表示する</string>  
    <string name="pref_show_hints_off">表示しない</string>  
    <string name="pref_show_hints_default">true</string>  

    <string name="pref_cat_player1">Player 1</string>  
    <string name="pref_player1">Player 1</string>  
    <string name="pref_player1_default">0</string>  
    <string name="pref_player1_name">Name (Max. 7 chars)</string>  
    <string name="pref_player1_name_default">Black</string>  

    <string name="pref_cat_player2">Player 2</string>  
    <string name="pref_player2">Player 2</string>  
    <string name="pref_player2_default">1</string>  
    <string name="pref_player2_name">Name (Max. 7 chars)</string>  
    <string name="pref_player2_name_default">White</string>  
</resources>
 